--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@types/mocha": "^5.2.7",
     "@types/node": "^12.12.14",
     "chai": "^4.2.0",
-    "typescript": "~3.5.3"
+    "typescript": "~3.5.3",
+    "uuid": "^7.0.1"
   },
   "nodemonConfig": {
     "ignore": [
